# aseba-target-thymio2

./: .gitmodules  CMakeLists.txt  Dockerfile  Jenkinsfile  abo.c  abo.h  analog.c  analog.h  behavior.c  behavior.h  button.c  button.h  cmake.md  crc.c  crc.h  entry.s  ground_ir.c  ground_ir.h  ir_prox.c  ir_prox.h  leds.c  leds.h  leds_low.s  lis2de12.c  lis2de12.h  log.c  log.h  main.c  memory_layout.h  mma7660.c  mma7660.h  mode.c  mode.h  motor.c  motor.h  ntc.c  ntc.h  p24FJ128GB106.gld  pid_motor.c  pid_motor.h  (+46 more)
hex/: thymio2-fwv10-bt-25-11-15-stripped.hex  thymio2-fwv10-bt-25-11-15.hex  thymio2-fwv11-bt-11-10-17-stripped.hex  thymio2-fwv11-bt-11-10-17.hex  thymio2-fwv12-bt-21-06-18-stripped.hex  thymio2-fwv12-bt-21-06-18.hex  thymio2-fwv13-bt-12-03-19-stripped.hex  thymio2-fwv13-bt-12-03-19.hex  thymio2-fwv14-bt-15-11-19-stripped-ack256.hex  thymio2-fwv14-bt-15-11-19-stripped.hex  thymio2-fwv14-bt-15-11-19.hex  thymio2-fwv4-bt-13-04-12-stripped.hex  thymio2-fwv4-bt-26-03-12-stripped.hex  thymio2-fwv6-bt-15-04-13-stripped.hex  thymio2-fwv6-bt-15-04-13.hex  thymio2-fwv7-bt-29-11-13-stripped.hex  thymio2-fwv8-bt-24-06-14-stripped.hex  thymio2-fwv9-bt-01-06-15-stipped.hex  thymio2-fwv9-bt-01-06-15.hex  thymio2-fwv9-bt-02-04-15-stripped.hex  thymio2-fwv9-bt-02-04-15.hex  thymio2-fwv9-bt-19-03-15-stripped.hex  thymio2-fwv9-bt-19-03-15.hex  thymio2-prod-13-04-11.hex  thymio2-proto-23-03-11.hex
log/: documentation  read.c
sd/: ffconf.h  mmc.c
usb_pic24/: HardwareProfile.h  LICENSE  usb_config.h  usb_descriptors.c  usb_device.c  usb_function_cdc.c  usb_function_cdc.h  usb_global.h
usb_pic24/usb/: usb.h  usb_device.h  usb_device_local.h  usb_hal.h  usb_hal_pic24.h
